kubernetes/base/ingress/citizen-portal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: citizen-portal
  namespace: mis-prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - portal.example.gov
      secretName: portal-tls
  rules:
    - host: portal.example.gov
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-active
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-active
                port:
                  number: 80
